<resources>
    <string name="app_name">DoctoApp</string>
    <string name="title_search">Search</string>
    <string name="title_login">Login</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_signup">Sign-up</string>
    <string name="title_my_profile">My profile</string>
    <string name="main_caption">Book an appointment with a specialized doctor online</string>
    <string name="main_search_bar_placeholder">Doctor, place, speciality...</string>
    <string name="main_search_btn">Search</string>
    <string name="main_intent_search">search_content</string>
    <string name="login_caption">Login and access your profile</string>
    <string name="login_email_placeholder">Email</string>
    <string name="login_pwd_placeholder">Password</string>
    <string name="login_stay_logged">I want to stay connected</string>
    <string name="login_forgot_pwd">Forgot password?</string>
    <string name="login_btn">Login</string>
    <string name="login_my_profile_btn">My profile</string>
    <string name="login_my_bookings_btn">My bookings</string>
    <string name="login_delete_account_btn">Delete my account</string>
    <string name="login_logout_btn">Logout</string>
    <string name="login_signup_caption">Not registered yet?</string>
    <string name="login_signup_link">Create your account now</string>
    <string name="login_signup_pro_caption">You are a professional?</string>
    <string name="login_signup_pro_link">Create your professional account here</string>
    <string name="login_success_msg_title">Connexion succeeded</string>
    <string name="login_success_msg_content">You are now connected. You can view your bookings and update your personal information using the right sidebar.</string>
    <string name="login_error_msg_title">Connexion failed</string>
    <string name="login_error_msg_content">Impossible to connect. Please check your email and/or your password. Make sure it exists, ask for renewing your password, or create an account using the links below.</string>
    <string name="login_delete_account_msg_title">Account removal failed</string>
    <string name="login_delete_account_msg_content">Something went wrong when removing your account.\nPlease contact the admin.</string>
    <string name="login_toast_login_patient_content">You are now connected to your patient account</string>
    <string name="login_toast_login_doctor_content">You are now connected to your doctor account</string>
    <string name="login_toast_logout_content">You are now disconnected from your patient account</string>
    <string name="login_toast_user_removed_content">Your account was successfully removed.</string>
    <string name="login_delete_account_popup_content">If you delete your account, you will not be able to access it anymore. However, the system will keep your data.\nYou still can ask for its removal in which case all your information will be deleted.</string>
    <string name="login_delete_account_popup_title">Delete your account</string>
    <string name="login_delete_account_popup_close">x</string>
    <string name="login_delete_account_popup_discard_btn_text">Discard</string>
    <string name="login_delete_account_popup_confirm_btn_text">Confirm</string>
    <string name="forgot_password_caption">Reset your password</string>
    <string name="forgot_password_email_placeholder">Email</string>
    <string name="forgot_password_pwd_placeholder">Password</string>
    <string name="forgot_password_confirm_pwd_placeholder">Confirm your password</string>
    <string name="forgot_password_btn">Set new password</string>
    <string name="forgot_password_success_msg_title">Password successfully reset</string>
    <string name="forgot_password_success_msg_content">Your new password is now set. You can use it to login.</string>
    <string name="forgot_password_error_msg_title">Password not reset</string>
    <string name="forgot_password_error_msg_content">Something went wrong when retrieving your account. Please make sure you provided an existing email address and both given passwords are the same.</string>
    <string name="signup_picture_uri">signup_picture_uri</string>
    <string name="signup_caption">Sign-up and access your patient profile</string>
    <string name="signup_take_picture_from_camera">Take a picture</string>
    <string name="signup_select_picture_from_gallery">Select a picture</string>
    <string name="signup_lastname">Last name</string>
    <string name="signup_firstname">First name</string>
    <string name="signup_birthdate">Birth date</string>
    <string name="signup_email">Email</string>
    <string name="signup_insurance_number">Insurance number</string>
    <string name="signup_pwd">Password</string>
    <string name="signup_confirm_pwd">Confirm your password</string>
    <string name="signup_street1">Street 1</string>
    <string name="signup_street2">Street 2</string>
    <string name="signup_city">City</string>
    <string name="signup_zip">Zip code</string>
    <string name="signup_country">Country</string>
    <string name="signup_lastname_placeholder">Last name</string>
    <string name="signup_firstname_placeholder">First name</string>
    <string name="signup_birthdate_placeholder">Birth date (ie. 1995–05–28)</string>
    <string name="signup_email_placeholder">Email</string>
    <string name="signup_insurance_number_placeholder">Insurance number</string>
    <string name="signup_pwd_placeholder">Password</string>
    <string name="signup_confirm_pwd_placeholder">Confirm your password</string>
    <string name="signup_street1_placeholder">Street 1</string>
    <string name="signup_street2_placeholder">Street 2</string>
    <string name="signup_city_placeholder">City</string>
    <string name="signup_zip_placeholder">Zip code</string>
    <string name="signup_country_placeholder">Country</string>
    <string name="signup_btn">sign up</string>
    <string name="signup_login_caption">Already have an account?</string>
    <string name="signup_login_link">Login now</string>
    <string name="signup_pro_account_caption">You are a professional?</string>
    <string name="signup_pro_account_link">Access your professional account</string>
    <string name="signup_success_msg_title">Registration succeeded</string>
    <string name="signup_success_msg_content">You are now registered. You can login to your account using the email you provided to sign-up.</string>
    <string name="signup_error_msg_title">Registration failed</string>
    <string name="signup_error_msg_content">Impossible to sign-up. Please make sure your email is in a correct format and that all the fields are properly filled. Also check both passwords are corresponding. If your email is already associated to an existing account, login to your account using the link below.</string>
    <string name="signup_toast_signup_content">You are now registered. Login to your account from the login page.</string>
    <string name="signup_patient_profile_section_label">Profile data</string>
    <string name="signup_patient_address_section_label">Address data</string>
    <string name="terms_of_use_popup_content">By signing-up to DoctoApp, you accept to be the host of all personal-related information you provide.\nYou also allow the system to use these information in order to provide online booking service.\nDoctoApp agrees to collect the minimum required personal-related information to run its service.</string>
    <string name="terms_of_use_popup_title">Terms of use of DoctoApp</string>
    <string name="terms_of_use_popup_close">x</string>
    <string name="terms_of_use_popup_discard_btn_text">Discard</string>
    <string name="terms_of_use_popup_confirm_btn_text">Confirm</string>
    <string name="my_profile_picture_uri">my_profile_picture_uri</string>
    <string name="my_profile_caption">Update your patient profile</string>
    <string name="my_profile_take_picture_from_camera">Take a picture</string>
    <string name="my_profile_select_picture_from_gallery">Select a picture</string>
    <string name="my_profile_lastname">Last name</string>
    <string name="my_profile_firstname">First name</string>
    <string name="my_profile_birthdate">Birth date</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_insurance_number">Insurance number</string>
    <string name="my_profile_old_pwd">Old (current) password</string>
    <string name="my_profile_new_pwd">Password</string>
    <string name="my_profile_confirm_pwd">Confirm your password</string>
    <string name="my_profile_street1">Street 1</string>
    <string name="my_profile_street2">Street 2</string>
    <string name="my_profile_city">City</string>
    <string name="my_profile_zip">Zip code</string>
    <string name="my_profile_country">Country</string>
    <string name="my_profile_lastname_placeholder">Last name</string>
    <string name="my_profile_firstname_placeholder">First name</string>
    <string name="my_profile_birthdate_placeholder">Birth date (ie. 1995–05–28)</string>
    <string name="my_profile_email_placeholder">Email</string>
    <string name="my_profile_insurance_number_placeholder">Insurance number</string>
    <string name="my_profile_old_pwd_placeholder">Old password</string>
    <string name="my_profile_new_pwd_placeholder">New password</string>
    <string name="my_profile_confirm_pwd_placeholder">Confirm your new password</string>
    <string name="my_profile_street1_placeholder">Street 1</string>
    <string name="my_profile_street2_placeholder">Street 2</string>
    <string name="my_profile_city_placeholder">City</string>
    <string name="my_profile_zip_placeholder">Zip code</string>
    <string name="my_profile_country_placeholder">Country</string>
    <string name="my_profile_update_btn">update my profile</string>
    <string name="my_profile_success_msg_title">Profile update succeeded</string>
    <string name="my_profile_success_msg_content">Your profile has been successfully updated with the provided information. You can anytime change the information of your profile.</string>
    <string name="my_profile_error_msg_title">Profile update failed</string>
    <string name="my_profile_error_msg_content">Impossible to update your profile. Please make sure your email is in a correct format and that all the fields are properly filled. Also check old password and both new passwords are corresponding, if modified. In case you changed your email address make sure it is available.</string>
    <string name="my_profile_toast_update_content">Your profile was successfully updated.</string>
    <string name="my_profile_patient_profile_section_label">Profile data</string>
    <string name="my_profile_patient_address_section_label">Address data</string>
    <string name="signup_pro_picture_uri">signup_pro_picture_uri</string>
    <string name="signup_pro_caption">Sign-up and access your professional profile</string>
    <string name="signup_pro_take_picture_from_camera">Take a picture</string>
    <string name="signup_pro_select_picture_from_gallery">Select a picture</string>
    <string name="signup_pro_take_header_from_camera">Take a header</string>
    <string name="signup_pro_select_header_from_gallery">Select a header</string>
    <string name="signup_pro_lastname">Last name</string>
    <string name="signup_pro_firstname">First name</string>
    <string name="signup_pro_speciality">Speciality</string>
    <string name="signup_pro_email">Email</string>
    <string name="my_bookings_title_patient">My bookings</string>
    <string name="my_bookings_subtitle">See all the appointments</string>
    <string name="my_bookings_no_booking_msg_title">No booking to display</string>
    <string name="my_bookings_no_booking_msg_content">It appears you have no booking registered yet in the system.\nTo book an appointment with a doctor, use the search system from the main screen of the app.</string>
</resources>