<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/signup_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:fontFamily="@font/roboto"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/signup_caption"
                android:textAlignment="center"
                android:textStyle="normal|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp">

                <LinearLayout
                    android:id="@+id/signup_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/signup_success_msg"
                    android:orientation="vertical"
                    android:padding="10sp"
                    android:layout_marginBottom="20sp"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/signup_msg_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/signup_success_msg_title"
                        android:textAlignment="center"
                        android:textColor="@color/signup_success_msg_title"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/signup_msg_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/signup_success_msg_content"
                        android:textAlignment="center"
                        android:textColor="@color/signup_success_msg_content"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_patient_profile_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/signup_patient_profile_section_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_patient_profile_section_label"
                        android:fontFamily="@font/roboto"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:padding="5sp" />

                    <EditText
                        android:id="@+id/signup_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_lastname_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_firstname_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_birthdate_placeholder"
                        android:inputType="datetime"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_email_placeholder"
                        android:inputType="textEmailAddress"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_insurance_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_insurance_number_placeholder"
                        android:inputType="numberSigned"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_pwd_placeholder"
                        android:inputType="textPassword"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_confirm_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_confirm_pwd_placeholder"
                        android:inputType="textPassword"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_patient_address_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/signup_patient_address_section_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_patient_address_section_label"
                        android:fontFamily="@font/roboto"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:padding="5sp" />

                    <EditText
                        android:id="@+id/signup_street1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_street1_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_street2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_street2_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_city_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_marginBottom="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_zip_placeholder"
                        android:inputType="numberSigned"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:background="@android:drawable/editbox_background_normal"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/signup_country_placeholder"
                        android:inputType="textPersonName"
                        android:padding="10sp"
                        android:textColor="@color/signup_input_text"
                        android:textColorHint="@color/signup_input_hint"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/signup_btn_background"
                    android:fontFamily="@font/roboto"
                    android:text="@string/signup_btn"
                    android:textColor="@color/signup_btn_text"
                    android:textColorHighlight="@color/signup_btn_text"
                    android:textColorHint="@color/signup_btn_text"
                    android:textColorLink="@color/signup_btn_text"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_login_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="5sp"
                android:background="@color/signup_login_background"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:id="@+id/signup_login_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingBottom="5sp"
                    android:text="@string/signup_login_caption"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/signup_login_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="5sp"
                    android:text="@string/signup_login_link"
                    android:textAlignment="center"
                    android:textColor="@color/signup_login_link"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_pro_account_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="15sp"
                android:background="@color/signup_login_background"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:id="@+id/signup_pro_account_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingBottom="5sp"
                    android:text="@string/signup_pro_account_caption"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/signup_pro_account_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="5sp"
                    android:text="@string/signup_pro_account_link"
                    android:textAlignment="center"
                    android:textColor="@color/signup_pro_account_link"
                    android:textStyle="normal|bold" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>